--- a/provincias.html
+++ b/provincias.html
@@ -1,14 +1,14 @@
-﻿<html ng-app="countryApp">
+﻿<html ng-app="provinciasApp">
 <head>
 	<meta charset="utf-8">
-	<title>Carga de un JSON</title>
+	<title>Carga de un JSON de Provincias del APIBADASID</title>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.1/angular.min.js"></script>
 	<script>
-		var countryApp = angular.module('countryApp', []);
-		countryApp.controller('CountryCtrl', function ($scope, $http){
+		var countryApp = angular.module('provinciasApp', []);
+		countryApp.controller('ProvinciaCtrl', function ($scope, $http){
 			//Carga del fichero JSON
-			$http.get('./countries').success(function(data) {
-				$scope.countries = data;
+			$http.get('./listaprovincias').success(function(data) {
+				$scope.listaProvincias = data;
 			});
 			//Por defecto ordena por el campo nombre en sentido A-Z
 			$scope.sortField = 'name';
@@ -16,18 +16,18 @@
 		});
 	</script>
 </head>
-<body ng-controller="CountryCtrl">
+<body ng-controller="ProvinciaCtrl">
 Search:<input ng-model="query" type="text"/>
 <table>
 <tr>
 <!--Al hacer clic en los encabezados de la tabla, cambia el campo y el criterio de ordenación, A-Z y Z-A-->
 <th><a href="" ng-click="sortField ='name'; reverse = !reverse">Provincia</a></th>
-<th><a href="" ng-click="sortField = 'population'; reverse = !reverse">population</a></th>
+<th><a href="" ng-click="sortField = 'codine'; reverse = !reverse">Código INE</a></th>
 </tr>
 <!--Esto actúa como un bucle, generando una fila en la tabla para cada entidad del JSON-->
-<tr ng-repeat="country in countries  | filter:query| orderBy:sortField:reverse">
-<td>{{country.name}}</td>
-<td>{{country.population | number }}</td><!--Formateamos como número el campo población-->
+<tr ng-repeat="provincia in listaProvincias  | filter:query| orderBy:sortField:reverse">
+<td>{{provincia.name}}</td>
+<td>{{provincia.codine | number }}</td><!--Formateamos como número el campo población-->
 </tr>
 </table>
 </body>
